# SEA-WiSe-2025-26

./: .env.example  .gitignore  LICENSE  README.md  explore_dataset.ipynb  ingestion.py  injestion.py  main.py  pyproject.toml  queries.py  query_engine.py  query_operator_specs.py  query_operators.py  query_parser.py  search.py  test_config.py  test_queries.py  tokenization.py  tokenization_playground.ipynb  tokenize_redis_content.py
.github/workflows/: main.yml
configs/: base.yaml  base_small.yaml  debug_preparation.yaml  demo.yaml  eval_ltr.yaml  ltr_cli.yaml  search_ltr.yaml  train_ltr.yaml
notebooks/: explore_dataset.ipynb
perf/: __init__.py  runner.py  simple_perf.py
queries/: sample_queries.txt
src/sea/index/: __init__.py  build_index.py  disk_index.py  document_store.py  spimi.py  tokenizer_job.py
src/sea/ingest/: kmerger.py  pipeline.py  worker.py
src/sea/ltr/: __init__.py  bm25.py  candidates.py  candidates_cli.py  debug_preparation.py  eval.py  features.py  metrics.py  msmarco.py  prepare_data.py  sampling.py  serve_cli.py  serve_tfr.py  split_cli.py  tfr_data.py  tfr_model.py  train_tfr.py
src/sea/perf/: runner.py  simple_perf.py
src/sea/query/: operators.py  parser.py  search.py  search_ltr.py  search_simple.py  specs.py  splade.py
src/sea/ranking/: __init__.py  io_wrapper.py  ranking.py  utils.py
src/sea/semantic/: __init__.py  client.py  index_cli.py  search.py  service.py
src/tests/: test_config.py  test_e2e_pipeline.py  test_ltr_data.py  test_ltr_features.py  test_ltr_model.py  test_ltr_sampling.py  test_ltr_serving.py  test_ltr_splits.py  test_queries.py  test_splade.py
tests/: test_config.py
tokenization/: __init__.py  simple_tokenizer.py  spacy_tokenizer.py
utils/: config.py
(+23 files in other folders)
