[project]
name = "sea-wise-2025-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "redis>=6.4.0",
    "spacy[apple]>=3.8.7",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
]
