[project]
name = "sea-wise-2025-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=0.9.9",
    "pandas>=2.3.3",
    "redis>=6.4.0",
    "spacy>=3.8.7",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "pytest>=7.1",
    "pytest-cov>=7.0.0"
]

[project.optional-dependencies]
apple = [
  "spacy[apple]>=3.8.7; sys_platform == 'darwin'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
