[project]
name = "sea-wise-2025-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "transformers>=4.57.3",
    "torch>=2.9.1",
    "polars>=1.35.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "tensorflow>=2.15,<3",
    "tensorflow-ranking>=0.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "pytest>=7.1",
    "pytest-cov>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
